feat: Map Reduce LCEL Chain

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -25,6 +25,7 @@
    ],
    "source": [
     "import re\n",
+    "from typing import final\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.document_loaders import UnstructuredFileLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
@@ -32,7 +33,7 @@
     "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
     "from langchain.storage import LocalFileStore\n",
     "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.schema.runnable import RunnablePassthrough\n",
+    "from langchain.schema.runnable import RunnablePassthrough, RunnableLambda\n",
     "\n",
     "from dotenv import load_dotenv\n",
     "\n",
@@ -62,27 +63,64 @@
     "vectorstore = Chroma.from_documents(docs, cached_embeddings)\n",
     "\n",
     "# Retriever는 한개의 string을 입력받고 document들의 list를 출력한다.\n",
-    "retriver = vectorstore.as_retriever()\n",
-    "prompt = ChatPromptTemplate.from_messages(\n",
+    "retriever = vectorstore.as_retriever()\n",
+    "\n",
+    "map_doc_prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
     "        (\n",
     "            \"system\",\n",
-    "            \"You are a helpful assistant. Answer questions using only the following context. If you don't know the answer just say you don't know, don't make it up:\\n\\n{context}\",\n",
+    "            \"\"\"\n",
+    "            Use the following portion of a long document to see if any of the text is relevant to answer the question. Return any relevant text verbatim. If there is no relevant text, return : ''\n",
+    "            -------\n",
+    "            {context}\n",
+    "            \"\"\",\n",
+    "        ),\n",
+    "        (\"human\", \"{question}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "map_doc_chain = map_doc_prompt | llm\n",
+    "\n",
+    "\n",
+    "def map_docs(inputs):\n",
+    "    documents = inputs[\"documents\"]\n",
+    "    question = inputs[\"question\"]\n",
+    "    return \"\\n\\n\".join( \n",
+    "        map_doc_chain.invoke(\n",
+    "            {\"context\": doc.page_content, \"question\": question}\n",
+    "        ).content\n",
+    "        for doc in documents\n",
+    "        # for문을 통해 document들을 순회하며, document의 page_content와 사용자 question을 입력받아 작업을 실행한다\n",
+    "    )\n",
+    "\n",
+    "# invoke를 통해 arg가 map_chain에 전달되고, retriever를 통해 많은 document가 출력된다\n",
+    "# RunnableLambda는 chain과 그 내부 어디에서든 function을 호출할 수 있게 해준다.\n",
+    "map_chain = {\n",
+    "    \"documents\": retriever,\n",
+    "    \"question\": RunnablePassthrough(),\n",
+    "} | RunnableLambda(map_docs)\n",
+    "\n",
+    "# llm에 전달될 final_prompt를 생성한다.\n",
+    "# 여기서 context는 llm이 추출한 여러 document들의 작은 부분들을 모아서 만들어진다.\n",
+    "final_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"\"\"\n",
+    "            Use the following portion of a long document to see if any of the text is relevant to answer the question. \n",
+    "            Return any relevant text verbatim. \n",
+    "            If there is no relevant text, return : ''\n",
+    "            -------\n",
+    "            {context}\n",
+    "            \"\"\",\n",
     "        ),\n",
     "        (\"human\", \"{question}\"),\n",
     "    ]\n",
     ")\n",
     "\n",
     "# RunnablePassthrough는 입력값(Description Victory Mansions)을 그대로 출력함(해당 값이 question에 그대로 작성됨)\n",
-    "chain = (\n",
-    "    {\n",
-    "        \"context\": retriver,\n",
-    "        \"question\": RunnablePassthrough(),\n",
-    "    }\n",
-    "    | prompt\n",
-    "    | llm\n",
-    ")\n",
-    "# invoke -> retriever(document들의 list 반환, 해당 document들은 context로 입력), 또한 매개인자는 question으로 입력됨 -> \n",
+    "chain = {\"context\": map_chain, \"question\": RunnablePassthrough() } | final_prompt | llm\n",
+    "\n",
     "chain.invoke(\"Describe Victory Mansions\")\n",
     "\n",
     "\n"
