feat: Streamlit Setting

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "음 tags=['Chroma', 'CacheBackedEmbeddings'] vectorstore=<langchain.vectorstores.chroma.Chroma object at 0x320588650>\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "AIMessage(content='Victory Mansions is a building from which one can see all four of the major Ministries in London. It is not described in detail in the provided context, but it serves as a vantage point to observe the surrounding architecture, which is dwarfed by the size of the Ministries. The context does not provide further information about its characteristics or significance.')"
+       "AIMessage(content='The text mentions four ministries: the Ministry of Truth, the Ministry of Peace, the Ministry of Love, and the Ministry of Plenty.')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,9 +112,9 @@
     ")\n",
     "\n",
     "# RunnablePassthrough는 입력값(Description Victory Mansions)을 그대로 출력함(해당 값이 question에 그대로 작성됨)\n",
-    "chain = {\"context\": map_chain, \"question\": RunnablePassthrough() } | final_prompt | llm\n",
+    "chain = {\"context\": map_chain, \"question\": RunnablePassthrough()} | final_prompt | llm\n",
     "\n",
-    "chain.invoke(\"Describe Victory Mansions\")\n",
+    "chain.invoke(\"How many ministries are mentioned\")\n",
     "\n",
     "\n"
    ]
